force-app/main/default/objects/CampaignMember/fields/Adoption_Date__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Date__c</fullName>
    <formula>IF ( 
ISBLANK(ContactId), 
Lead.Adoption_Date__c, 
Contact.Adoption_Date__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adoption Date</label>
    <type>DateTime</type>
</CustomField>