force-app/main/default/objects/CampaignMember/fields/Aware_Date__c.field-meta.xml
<CustomField>
    <fullName>Aware_Date__c</fullName>
    <formula>IF ( 
ISBLANK(ContactId), 
Lead.Aware_Date__c, 
Contact.Aware_Date__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aware Date</label>
    <type>DateTime</type>
</CustomField>