force-app/main/default/objects/CampaignMember/fields/Consideration_Date__c.field-meta.xml
<CustomField>
    <fullName>Consideration_Date__c</fullName>
    <formula>IF ( 
ISBLANK(ContactId), 
Lead.Consideration_Date__c, 
Contact.Consideration_Date__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consideration Date</label>
    <type>DateTime</type>
</CustomField>