force-app/main/default/objects/CampaignMember/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Allied Health</fullName>
            </value>
            <value>
                <fullName>Americas (Delegates)</fullName>
            </value>
            <value>
                <fullName>Americas (Staff)</fullName>
            </value>
            <value>
                <fullName>Anatomist</fullName>
            </value>
            <value>
                <fullName>APAC (Delegate)</fullName>
            </value>
            <value>
                <fullName>APAC (Staff)</fullName>
            </value>
            <value>
                <fullName>Austria (Delegate)</fullName>
            </value>
            <value>
                <fullName>Austria (Staff)</fullName>
            </value>
            <value>
                <fullName>AV</fullName>
            </value>
            <value>
                <fullName>Belgium (Delegate)</fullName>
            </value>
            <value>
                <fullName>Belgium (Staff)</fullName>
            </value>
            <value>
                <fullName>Brand Management</fullName>
            </value>
            <value>
                <fullName>Business Guest</fullName>
            </value>
            <value>
                <fullName>Canada (Delegate)</fullName>
            </value>
            <value>
                <fullName>Canada (Staff)</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Czech Republic/Slovakia (Delegate)</fullName>
            </value>
            <value>
                <fullName>Czech Republic/Slovakia (Staff)</fullName>
            </value>
            <value>
                <fullName>Denmark (Delegate)</fullName>
            </value>
            <value>
                <fullName>Denmark (Staff)</fullName>
            </value>
            <value>
                <fullName>Direct Sales</fullName>
            </value>
            <value>
                <fullName>East Europe (Delegates)</fullName>
            </value>
            <value>
                <fullName>East Europe (Staff)</fullName>
            </value>
            <value>
                <fullName>EE/Balkans/Baltics (Delegate)</fullName>
            </value>
            <value>
                <fullName>EE/Balkans/Baltics (Staff)</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Exhibitor</fullName>
            </value>
            <value>
                <fullName>Faculty</fullName>
            </value>
            <value>
                <fullName>Fellow (U.S. &amp; Puerto Rico)</fullName>
            </value>
            <value>
                <fullName>Finland (Delegate)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>