force-app/main/default/objects/CampaignMember/fields/CreatedByName__c.field-meta.xml
<CustomField>
    <fullName>CreatedByName__c</fullName>
    <formula>CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName</formula>
    <label>Created By (Name)</label>
    <type>Text</type>
</CustomField>