force-app/main/default/objects/CampaignMember/fields/Cvent_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Cvent_Campaign__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cvent Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>