force-app/main/default/objects/CampaignMember/fields/Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Decision_Date__c</fullName>
    <formula>IF ( 
ISBLANK(ContactId), 
Lead.Decision_Date__c, 
Contact.Decision_Date__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Decision Date</label>
    <type>DateTime</type>
</CustomField>