force-app/main/default/objects/CampaignMember/fields/Disqualified_Date__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Date__c</fullName>
    <formula>IF ( 
ISBLANK(ContactId), 
Lead.Disqualified_Date__c, 
Contact.Disqualified_Date__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disqualified Date</label>
    <type>DateTime</type>
</CustomField>