force-app/main/default/objects/CampaignMember/fields/Disqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Reason__c</fullName>
    <formula>IF ( 
ISBLANK(ContactId), 
TEXT(Lead.Disqualified_Reason__c), 
TEXT(Contact.Disqualified_Reason__c) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disqualified Reason</label>
    <type>Text</type>
</CustomField>