force-app/main/default/objects/CampaignMember/fields/Evaluation_Date__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Date__c</fullName>
    <formula>IF ( 
ISBLANK(ContactId), 
Lead.Evaluation_Date__c, 
Contact.Evaluation_Date__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Evaluation Date</label>
    <type>DateTime</type>
</CustomField>