force-app/main/default/objects/CampaignMember/fields/Fellowship_Completion_Date_Date_Date__c.field-meta.xml
<CustomField>
    <fullName>Fellowship_Completion_Date_Date_Date__c</fullName>
    <formula>Lead.Fellowship_Completion_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fellowship Completion Date (Date) (Date)</label>
    <type>Text</type>
</CustomField>