force-app/main/default/objects/CampaignMember/fields/Handoff_Status__c.field-meta.xml
<CustomField>
    <fullName>Handoff_Status__c</fullName>
    <formula>IF ( 
ISBLANK(ContactId), 
TEXT(Lead.Handoff_Status__c), 
TEXT(Contact.Handoff_Status__c) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Handoff Status</label>
    <type>Text</type>
</CustomField>