force-app/main/default/objects/CampaignMember/fields/Hospital_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Affiliation__c</fullName>
    <formula>Lead.Hospital_Affiliation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hospital Affiliation</label>
    <type>Text</type>
</CustomField>