force-app/main/default/objects/CampaignMember/fields/Inquiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Date__c</fullName>
    <formula>IF ( 
ISBLANK(ContactId), 
Lead.Inquiry_Date__c, 
Contact.Inquiry_Date__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inquiry Date</label>
    <type>Date</type>
</CustomField>