force-app/main/default/objects/CampaignMember/fields/Journey_Stage__c.field-meta.xml
<CustomField>
    <fullName>Journey_Stage__c</fullName>
    <formula>IF ( 
ISBLANK(ContactId), 
TEXT(Lead.Journey_Stage__c), 
TEXT(Contact.Journey_Stage__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Journey Stage</label>
    <type>Text</type>
</CustomField>