force-app/main/default/objects/CampaignMember/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <formula>IF (
ISBLANK(ContactId),
TEXT(Lead.LeadSource),
TEXT(Contact.LeadSource)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Source</label>
    <type>Text</type>
</CustomField>