force-app/main/default/objects/CampaignMember/fields/MQL_Date__c.field-meta.xml
<CustomField>
    <fullName>MQL_Date__c</fullName>
    <formula>IF ( 
ISBLANK(ContactId), 
Lead.Marketing_Qualified_Date__c, 
Contact.Marketing_Qualified_Date__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Qualified Date</label>
    <type>DateTime</type>
</CustomField>