force-app/main/default/objects/CampaignMember/fields/NPI__c.field-meta.xml
<CustomField>
    <fullName>NPI__c</fullName>
    <formula>Lead.NPI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPI</label>
    <type>Text</type>
</CustomField>