force-app/main/default/objects/CampaignMember/fields/Onboarding_Date__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Date__c</fullName>
    <formula>IF ( 
ISBLANK(ContactId), 
Lead.Onboarding_Date__c, 
Contact.Onboarding_Date__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onboarding Date</label>
    <type>DateTime</type>
</CustomField>