force-app/main/default/objects/CampaignMember/fields/purecloud__Last_Attempt__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Last_Attempt__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Attempt</label>
    <type>DateTime</type>
</CustomField>