force-app/main/default/objects/CampaignMember/fields/Qualified_Date__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Date__c</fullName>
    <formula>IF ( 
ISBLANK(ContactId), 
Lead.Qualified_Date__c, 
Contact.Qualified_Date__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qualified Date</label>
    <type>DateTime</type>
</CustomField>