force-app/main/default/objects/CampaignMember/fields/Remarket_Date__c.field-meta.xml
<CustomField>
    <fullName>Remarket_Date__c</fullName>
    <formula>IF ( 
ISBLANK(ContactId), 
Lead.Remarket_Date__c, 
Contact.Remarket_Date__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remarket Date</label>
    <type>DateTime</type>
</CustomField>