force-app/main/default/objects/CampaignMember/fields/Remarket_Reason__c.field-meta.xml
<CustomField>
    <fullName>Remarket_Reason__c</fullName>
    <formula>IF ( 
ISBLANK(ContactId), 
TEXT(Lead.Remarket_Reason__c), 
TEXT(Contact.Remarket_Reason__c) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remarket Reason</label>
    <type>Text</type>
</CustomField>