force-app/main/default/objects/CampaignMember/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <formula>Lead.Rep_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Rep</label>
    <type>Text</type>
</CustomField>