force-app/main/default/objects/CampaignMember/fields/Value_Realization_Date__c.field-meta.xml
<CustomField>
    <fullName>Value_Realization_Date__c</fullName>
    <formula>IF ( 
ISBLANK(ContactId), 
Lead.Value_Realization_Date__c, 
Contact.Value_Realization_Date__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value Realization Date</label>
    <type>DateTime</type>
</CustomField>