force-app/main/default/objects/CampaignMember/recordTypes/Cvent_Campaign_Member_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Cvent_Campaign_Member_Record_Type</fullName>
    <active>true</active>
    <label>Cvent Campaign Member Record Type</label>
</RecordType>