force-app/main/default/objects/CampaignMember/recordTypes/DN_US_Campaign_Member_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>DN_US_Campaign_Member_Record_Type</fullName>
    <active>true</active>
    <label>DN-US-Campaign Member Record Type</label>
</RecordType>