force-app/main/default/objects/CampaignMember/recordTypes/EU_Campaign_Member_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>EU_Campaign_Member_Record_Type</fullName>
    <active>true</active>
    <label>EU-Campaign Member Record Type</label>
</RecordType>