force-app/main/default/objects/CampaignMember/recordTypes/Mktg_US_Campaign_Member_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Mktg_US_Campaign_Member_Record_Type</fullName>
    <active>true</active>
    <description>Used for marketing events (trade shows and other industry events)</description>
    <label>Mktg-US-Campaign Member Record Type</label>
</RecordType>